# R-Tools

./: .gitignore  .pnp.cjs  2108.csv  2108number.csv  2108number_withbug.csv  README.md  components.d.ts  conf.ini  index.html  package-lock.json  package.json  pnpm-lock.yaml  splashscreen.html  vite.config.ts
.github/workflows/: main.yml  rust.yml
src/: App.vue  main.ts  styles.css
src-tauri/: 1.csv  Cargo.toml  conf.ini  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: conf.rs  error.rs  lib.rs  main.rs
src-tauri/src/app/: calarand.rs  cmd.rs  csvrand.rs  menu.rs  mod.rs  setup.rs  windows.rs
src-tauri/src/app/readers/: calareader.rs  csvreader.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/freader/: mod.rs
src/components/: Randomapp.vue  rand_csv.vue
src/components/app/: MkRender.vue
src/components/calculators/: TimeLapsephoto.vue
src/components/csv_rand/: Setting_Page.vue  main.vue
src/components/random/: CalaRand.vue  CalaRandSetting.vue  CsvRand.vue
src/router/: index.ts
src/views/: CalculatorView.vue  HomeView.vue  RandView.vue  RandomView.vue  SettingView.vue  UpdateDialog.vue  csvRandView.vue
