[package]
name = "rtools"
version = "0.6.0"
description = "A box that provides some useful tools"
authors = ["szhh"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "clipboard-write-text", "dialog-ask", "dialog-open", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
lazy_static = "1.4.0"
thiserror = "1.0.40"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
log = "0.4.19"
anyhow = "1.0.71"
calamine = "0.21.2"
semver = "1.0.18"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
